port 1.20.2, translate(kr, en), dye check change